# Inventory-System-by-Qt6

./: .gitignore  CMakeLists.txt  README.md  databasemanager.cpp  databasemanager.h  dbconfig.h  inventorysystem.cpp  inventorysystem.h  itemformwidget.cpp  itemformwidget.h  iteminfo.h  itemtableview.cpp  itemtableview.h  main.cpp  plugin.json  plugin_interface.h  plugin_interface_ui.h  resources.qrc  searchtoolbar.h  settingsdialog.cpp  settingsdialog.h  settingsmanager.cpp  settingsmanager.h  updatechecker.cpp  updatechecker.h
plugins/DashboardPlugin/: CMakeLists.txt  dashboardplugin.cpp  dashboardplugin.h  plugin.json
plugins/JsonImportPlugin/: CMakeLists.txt  jsonimportplugin.cpp  jsonimportplugin.h  plugin.json
